--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@
   font-family: 'Kanit', sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 .page {
   width: 100vw;
   height: 100vh;
@@ -21,6 +25,8 @@
 .main-container {
   display: flex;
   flex-direction: row;
+  height: 100vh;
+  align-items: center;
 }
 
 .content-container {
@@ -131,4 +137,12 @@ p {
   -o-transition: opacity 1s;
   -moz-transition: opacity 1s;
   -webkit-transition: opacity 1s;
+}
+
+.contact-info {
+  flex: 1;
+}
+
+.contact-logo {
+  width: 20vw;
 }
